# teto

./: AI.cc  AI.h  README.md  main.cc
src/: AI.h  CMakeLists.txt  Cell.h  Decision.h  Field.h  Mino.h  MinoType.h  Onore.cc  Onore.h  Printer.cc  Printer.h  Simulator.cc  Simulator.h  check.cc  main.cc
